# to_do_list

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  create_super_user.py  docker-compose.yml  entrypoint.sh  pyproject.toml
app/admin_panel/: admin.py  apps.py  serializers.py  views.py
app/config/: app_factory.py  http_client.py  settings.py  urls.py
app/migrations/: 0001_initial.py
app/models/: models.py
data_forge/: cli.py
data_forge/commands/: first_migrate.py  insert_data.py
data_forge/data/: categories.json  projects.json  tasks.json  tasksassociation.json  user.json
db_config/: pg_hba.conf  postgresql.conf
db_config/init-scripts/: 01_init.sh
pg_backup_config/scripts/: backup.sh
